# Flick

./: .gitignore  .gitmodules  .testing.md.kate-swp  MOBIAN.md  README.md  build.sh  build_phone.sh  claude.md  flick-pkg  flick.service  install-droidian.sh  install-mobian.sh  install-service.sh  install-session.sh  install.sh  start.sh  start_drm.sh  start_embedded.sh  start_flick.sh  start_hwcomposer.sh  start_letterbox.sh  start_phone.sh  test-flick.sh  test_drm_shim.sh  test_phone.sh  testing.md
apps/audiobooks/: flick-audiobooks.desktop  main.qml  manifest.json  run_audiobooks.sh
apps/calculator/: flick-calculator.desktop  main.qml  run_calculator.sh
apps/calendar/: README.txt  flick-calendar.desktop  main.qml  run_calendar.sh
apps/clock/: flick-clock.desktop  main.qml  run_clock.sh
apps/contacts/: flick-contacts.desktop  main.qml  run_contacts.sh
apps/distract/: AUDIO_FIX.md  flick-distract.desktop  generate_beep.py  generate_sound_files.sh  generate_sounds.py  main.qml  manifest.json  test_audio.qml
apps/ebooks/: epub_helper.sh  extract_epub.sh  flick-ebooks.desktop  main.qml  run_ebooks.sh
apps/email/: email_backend.py  flick-email.desktop  main.qml  run_email.sh
apps/files/: flick-files.desktop  main.qml  run_files.sh
apps/flick_keyboard/: flick_keyboard.py
apps/flick_lockscreen/: flick_lockscreen.py
apps/flick_settings/: README.md  flick_settings.py  pubspec.yaml
apps/home/: main.qml  manifest.json  run_home.sh
apps/lap-track/: main.qml
apps/lockscreen/: LockScreen.qml  MediaControls.qml  PatternEntry.qml  PinEntry.qml  SpyEye.qml  main.qml  run.sh  run_lockscreen.sh  test.qml
apps/maps/: flick-maps.desktop  main.qml  run_maps.sh
apps/messages/: README.md  flick-messages.desktop  main.qml  messaging_daemon.py  run_messages.sh
apps/music/: flick-music.desktop  main.qml  run_music.sh
apps/notes/: flick-notes.desktop  main.qml  run_notes.sh
apps/passwordsafe/: flick-passwordsafe.desktop  main.py  main.qml  passwordsafe_helper.py  run_passwordsafe.sh  vault_helper.sh
apps/phone/: flick-phone.desktop  main.qml  phone_helper.py  run_phone.sh
apps/photos/: flick-photos.desktop  main.qml  run_photos.sh
apps/podcast/: flick-podcast.desktop  main.qml  run_podcast.sh
apps/recorder/: README.md  flick-recorder.desktop  main.qml  run_recorder.sh
apps/sandbox/: Cargo.toml  flick-sandbox.desktop  main.qml  run_sandbox.sh
apps/settings/: SettingsMain.qml  flick-settings-ctl  main.qml  run_settings.sh
apps/shared/: SwipeBackArea.qml  Theme.qml  qmldir
apps/store/: README.md  flick-store.desktop  install_app.sh  install_server.py  install_watcher.sh  main.qml  run_store.sh
apps/terminal/: flick-terminal.desktop  main.qml  run_terminal.sh
apps/video/: flick-video.desktop  main.qml  run_video.sh
apps/weather/: flick-weather.desktop  main.qml  run_weather.sh
apps/web/: flick-web.desktop  main.qml  run_web.sh
apps/welcome/: main.qml  run_welcome.sh  welcome.desktop
compositor/: Cargo.toml  TODO_ICONS.md  claude.md  install-session.sh  run.sh
compositor/src/: main.rs  state.rs  system.rs  viewport.rs  xwayland.rs
compositor/src/backend/: mod.rs  udev.rs  winit.rs
compositor/src/input/: gestures.rs  mod.rs  touch.rs
compositor/src/shell/: app_grid.rs  apps.rs  icons.rs  lock_screen.rs  mod.rs  primitives.rs  quick_settings.rs  text.rs
config/: flick-session  flick-swap.sh  flick.desktop  lisgd.sh
config/devices/: default.conf  flx1s.conf  pinephone.conf  pixel3a.conf
config/pulse/: no-suspend.pa
docs/: QML_LOCKSCREEN_STATUS.md
drm-hwcomposer-shim/: Cargo.toml  README.md  test_shim.sh  test_weston.sh
drm-hwcomposer-shim/include/: drm_hwcomposer_shim.h
drm-hwcomposer-shim/src/: c_api.rs  drm_device.rs  egl.rs  error.rs  ffi.rs  gbm_device.rs  hwcomposer.rs  lib.rs
flick-wlroots/: .gitignore  Makefile  README.md  meson.build
flick-wlroots/src/: main.c
flick-wlroots/src/compositor/: input.c  input.h  output.c  output.h  server.c  server.h  view.c  view.h
flick-wlroots/src/shell/: apps.c  apps.h  gesture.c  gesture.h  shell.c  shell.h
hwc-shim/: Makefile  README.md
lib/: flick-env.sh
lib/FlickBackend/: qmldir
shell/: Cargo.toml  PLAN_LOCK_SETTINGS.md  README.md  build.rs  init_config.sh  pubspec.yaml
shell-qml/: main.py  main.qml  run.sh
shell/config/: apps.json
shell/data/: markov_chain.json  markov_transitions.json
shell/lib/: main.dart
shell/lib/core/: app_model.dart  gesture_service.dart  logger.dart  window_service.dart
shell/lib/shell/home/: app_grid.dart  app_switcher.dart  home_screen.dart
shell/lib/theme/: flick_theme.dart
shell/linux/: CMakeLists.txt
shell/linux/protocols/: phosh-private.xml
shell/linux/runner/: CMakeLists.txt  my_application.cc
shell/protocols/: android-wlegl.xml
shell/scripts/: flashlight-toggle.sh
shell/src/: android_wlegl.rs  demo.rs  main.rs  spawn_user.rs  state.rs  system.rs  text_input.rs  touch_effects.rs  xwayland.rs
shell/src/backend/: drm_shim.rs  hwc_shim_ffi.rs  hwcomposer.rs  hwcomposer_ffi.rs  mod.rs  udev.rs  winit.rs
shell/src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
shell/src/input/: gestures.rs  handler.rs  mod.rs
shell/src/shell/: app_grid.rs  app_switcher.rs  apps.rs  fan_menu.rs  icons.rs  lock_screen.rs  mod.rs  overlay.rs  presage.rs  quick_settings.rs  screen_saver.rs  slint_ui.rs  word_prediction.rs
shell/test/: widget_test.dart
shell/ui/: OrbitalHome.qml  shell.slint
sounds/: generate_sounds.py
store/: PACKAGE_FORMAT.md
tools/: build_markov_chain.py
(+40 files in other folders)
