[package]
name = "drm-hwcomposer-shim"
version = "0.1.0"
edition = "2021"
description = "DRM/KMS shim layer over Android hwcomposer for Linux phones"
license = "GPL-3.0"
authors = ["David Hamner"]

[lib]
name = "drm_hwcomposer_shim"
crate-type = ["lib", "cdylib"]

[dependencies]
# For DRM/GBM interfaces
drm = "0.12"
drm-ffi = "0.8"
gbm = "0.15"

# EGL bindings
khronos-egl = { version = "6.0", features = ["dynamic"] }

# Logging
tracing = "0.1"

# FFI utilities
libc = "0.2"

# Error handling
thiserror = "1.0"

[build-dependencies]
pkg-config = "0.3"

[features]
default = ["hwcomposer2"]
hwcomposer1 = []
hwcomposer2 = []
