[package]
name = "drm-hwcomposer-shim"
version = "0.1.0"
edition = "2021"
description = "DRM/KMS shim layer over Android hwcomposer for Linux phones"
license = "GPL-3.0"
authors = ["David Hamner"]

[lib]
name = "drm_hwcomposer_shim"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "test_hwc"
path = "src/bin/test_hwc.rs"

[[bin]]
name = "test_gbm"
path = "src/bin/test_gbm.rs"

[[bin]]
name = "test_c_api"
path = "src/bin/test_c_api.rs"

[dependencies]
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# FFI utilities
libc = "0.2"

# Error handling
thiserror = "1.0"

[features]
default = ["hwcomposer2"]
hwcomposer1 = []
hwcomposer2 = []
