[package]
name = "flick-shell"
version = "0.1.0"
edition = "2021"
description = "Flick mobile shell - a Wayland compositor with Slint UI for Linux phones"
license = "GPL-3.0"

[build-dependencies]
slint-build = "=1.7.2"

[dependencies]
# Slint UI framework (GPL-compatible)
# Using 1.7 for Rust 1.85 compatibility, software renderer for compositor integration
slint = { version = "=1.7.2", default-features = false, features = ["compat-1-2", "std", "renderer-software"] }

# Smithay - the Wayland compositor library (from git for latest features)
smithay = { git = "https://github.com/Smithay/smithay", features = [
    "backend_drm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "backend_winit",
    "renderer_glow",
    "wayland_frontend",
    "xwayland",
] }

# Wayland protocols
smithay-drm-extras = { git = "https://github.com/Smithay/smithay" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
calloop = "0.14"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Time
chrono = "0.4"

# JSON for IPC messages
serde_json = "1.0"

# 2D graphics and text rendering
femtovg = "0.9"

# Image loading for icons
image = { version = "0.25", default-features = false, features = ["png"] }

# Lazy static for global state
lazy_static = "1.4"

# Authentication
pam = "0.7"
bcrypt = "0.15"

# System (for hwcomposer FFI)
libc = "0.2"

# Wayland protocol generation
wayland-scanner = "0.31"

# Raw wayland FFI (for EGL integration)
wayland-sys = "0.31"
wayland-backend = { version = "0.3", features = ["server_system"] }

# EGL for hwcomposer backend (used when feature enabled)
khronos-egl = { version = "6.0", features = ["dynamic"], optional = true }

[features]
default = ["udev"]
udev = []
winit = []
hwcomposer = ["khronos-egl"]

[[bin]]
name = "flick"
path = "src/main.rs"
